--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 1fr 2fr 2fr 2fr 2fr 2fr 1fr;
+  grid-template-columns: 1fr 2fr 2fr 2fr 2fr 2fr 2fr 0.5fr;
   grid-template-rows: repeat(7, 1fr);
   background: url('./assets/background.jpg');
   background-size: cover;
@@ -183,7 +183,7 @@ body {
   height: 10px;
   border-radius: 20px;
   background: #e68b6e;
-  animation: loading 3s forwards cubic-bezier(0, 00, 0, 1);
+  animation: loading 1s forwards cubic-bezier(0, 00, 0, 1);
 }
 
 @keyframes loading {
@@ -193,4 +193,12 @@ body {
   100% {
     width: 100%;
   }
+}
+
+/* Javascript create DOM */
+
+.weekly-display {
+  grid-area: 1 / 7 / 8 /8;
+  display: grid;
+  grid-template-rows: repeat(7, 1fr);
 }
