--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@ body {
   align-self: flex-start;
   justify-self: center;
   border-radius: 4%;
+  box-shadow: 0px 5px 5px #4a5675;
 }
 
 .input-tab {
@@ -136,6 +137,12 @@ body {
   transform: scale(1.04);
 }
 
+.error {
+  font-size: small;
+  color: rgb(183, 192, 62);
+  padding: 5%;
+}
+
 /* Animation Styles */
 
 .animation-modal {
@@ -195,10 +202,42 @@ body {
   }
 }
 
-/* Javascript create DOM */
+/* Javascript created DOM */
 
 .weekly-display {
   grid-area: 1 / 7 / 8 /8;
   display: grid;
   grid-template-rows: repeat(7, 1fr);
+  align-items: center;
+}
+
+.card-header {
+  justify-self: center;
+  grid-area: 1 / 1 / 2 / 2;
+  margin: 0;
+  padding: 2%;
+  color: #d1f5ff;
+}
+
+.card {
+  background-image: linear-gradient(
+    to right bottom,
+    #866cb1,
+    #a26aa8,
+    #b76b9c,
+    #c66e8f,
+    #cf7482
+  );
+  display: grid;
+  align-items: center;
+  grid-template-rows: auto 1fr;
+  height: 80%;
+  border-radius: 5px;
+  background-color: red;
+  box-shadow: 0px 5px 5px #4a5675;
+}
+
+.card-image {
+  grid-area: 1 / 1 / 3 / 2;
+  height: 10vh;
 }
