--- a/src/style.css
+++ b/src/style.css
@@ -213,9 +213,8 @@ body {
 
 .card-header {
   justify-self: center;
-  grid-area: 1 / 1 / 2 / 2;
+  grid-area: 1 / 1 / 2 / 3;
   margin: 0;
-  padding: 2%;
   color: #d1f5ff;
 }
 
@@ -230,7 +229,8 @@ body {
   );
   display: grid;
   align-items: center;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   height: 80%;
   border-radius: 5px;
   background-color: red;
@@ -238,6 +238,102 @@ body {
 }
 
 .card-image {
-  grid-area: 1 / 1 / 3 / 2;
+  grid-area: 1 / 1 / 3 / 4;
   height: 10vh;
+}
+
+.card-temperatures {
+  padding: 1px;
+  grid-area: 2 / 2 / 3 / 3;
+  align-self: flex-start;
+  color: #d1f5ff;
+  font-weight: 900;
+  font-size: 24px;
+}
+
+/* Current-day display */
+
+.current-day-wrapper {
+  grid-area: 4 / 2 / 7 / 6;
+  width: 80%;
+}
+
+.current-day {
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(
+    to left bottom,
+    #9b6375,
+    #be7778,
+    #d99077,
+    #e9ae76,
+    #edd17d
+  );
+  box-shadow: 0px 5px 5px #4a5675;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 20% 1fr 1fr;
+  align-items: center;
+  border-radius: 20px;
+}
+
+.current-title {
+  grid-area: 1 / 1 / 2 / 2;
+  color: #d1f5ff;
+  padding-left: 20%;
+  font-size: larger;
+  font-style: italic;
+}
+
+.current-city {
+  color: #d1f5ff;
+  padding-left: 20%;
+  font-size: larger;
+  font-style: italic;
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+.current-main-weather {
+  color: #d1f5ff;
+  padding-left: 20%;
+  font-size: larger;
+  font-style: italic;
+  grid-area: 1 / 3 / 2 / 4;
+}
+
+.current-day .card-image {
+  grid-area: 1 / 3 / 3 / 4;
+  height: 20vh;
+}
+
+.current-temperature {
+  grid-area: 2 / 1 / 3 / 3;
+  font-weight: bolder;
+  font-style: italic;
+  color: #d1f5ff;
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.current-temperature .temp-title {
+  margin: 0;
+
+  grid-area: 1 / 1 / 2 / 3;
+  font-size: 24px;
+}
+
+.current-temperature .temp-content {
+  margin: 0;
+
+  font-size: 38px;
+  grid-area: 2 / 1 / 3 / 3;
+}
+
+.current-temperature img {
+  justify-self: flex-end;
+  justify-self: center;
+  height: 10vh;
+  grid-area: 1 / 2 / 3 / 3;
 }
