--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,7 @@ body {
   justify-self: center;
   border-radius: 4%;
   box-shadow: 0px 5px 5px #4a5675;
+  position: relative;
 }
 
 .input-tab {
@@ -372,4 +373,28 @@ body {
 .current-wind img {
   grid-area: 2 / 1 / 3 / 3;
   justify-self: center;
+}
+
+/* footer styling */
+
+a img {
+  height: 3vh;
+  filter: drop-shadow(0px 0px 0px white);
+  transition: all 400ms ease-in;
+}
+
+a img:hover {
+  transform: rotate(720deg) scale(1.1);
+  filter: drop-shadow(0px 2px 2px #d1f5ff);
+}
+
+footer {
+  position: absolute;
+  bottom: 5%;
+  left: 30%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #d1f5ff;
+  font-style: italic;
 }
